# pet-project

./: .gitignore  poetry.toml  pyproject.toml
backend/: .pre-commit-config.yaml  Makefile  poetry.toml  pyproject.toml
backend/src/: main.py
backend/src/api/: models.py  views.py
backend/src/db/: utils.py
backend/src/pet_project/: settings.py
